# zasv

./: .gitignore  README.md  用链表实现报数问题.c
BigData/: CHelper.cpp  CHelper.h  CMidFileHandler.cpp  CMidFileHandler.h  CRoad.cpp  CRoad.h  CRoadSegment.cpp  CRoadSegment.h  CTimeSlot.h  CTrainer.cpp  CTrainer.h  Makefile  Readme.md  Types.h  main.cpp
BinaryTree/: btree.c  btree.h  main.c  queue.c  queue.h  travel.c  travel.h
Cocos2d-x_Linux+Android_Template/PaxHeader/: Classes  Resources  proj.android  proj.ios  proj.linux  proj.win32
HomePage/: Readme - 副本.txt  Readme.md  Readme.txt
HomePage/js/: main.js
Search/: BinarySearchTree.c  BinarySearchTree.h  Hash.c  Hash.h  main.c  t
Smart Card/: MFC.sln  Readme.md
algorithm/: b  binarySearch.cpp  find_k.h
cypher/: Readme.md
data structure big work/: Readme.md  code.c  code.h  main.c  实验报告.doc  实验报告.ppt
feeling alarm/: Readme.md
jnirawbytetest/: build.gradle  result.md
jnirawbytetest/app/: CMakeLists.txt  aspectj.gradle  build.gradle  mono.pcm
jnirawbytetest/app/sample_audio/: 10s.m4a  bgm.mono.pcm  olt.aac  pp.encode.aac  push.sh
jnirawbytetest/app/src/androidTest/java/com/young/jnirawbytetest/: EndianessTest.java  ExampleInstrumentedTest.java
jnirawbytetest/app/src/main/: AndroidManifest.xml
jnirawbytetest/app/src/main/assets/: libs.zip.lzma
jnirawbytetest/app/src/main/cpp/: CppSide.cpp  CppSide.h  JavaJniPerformanceCompare.cpp  JavaJniPerformanceCompare.h  jni_onload.cpp
jnirawbytetest/app/src/main/cpp/effect/: CMakeLists.txt
jnirawbytetest/app/src/main/cpp/effect/src/: SuperSoundWrapper.cpp  VoiceChangerWrapper.cpp  VoiceChangerWrapper.h  jni_onload.cpp
jnirawbytetest/app/src/main/cpp/effect/supersound/include/: supersound_err.h
jnirawbytetest/app/src/main/cpp/effect/voicechanger/include/: STTypes.h  SoundTouch.h  libvoicechanger.h
jnirawbytetest/app/src/main/cpp/kge/include/: CCleanNew3.h  CElecVoice.h  CFilters.h  CFrameAxis.h  CKalaVolume.h  CMixSound.h  CMixSoundMonoOnly.h  CReverb.h  CReverb3.h  CReverb3Quick.h  CReverb4.h  CScores.h  CSectionCfg.h  CStatics.h  CToneShift.h  CVoiceShift.h  CVolumeScaler.h  CabCfg.h  CautoGain.h  Cclean.h  Climit.h  CnotePlay.h  CqrcSection2.h  CqrcStar2.h  KTYPED.h  KaAudioBuffer.h  KalaInterfaces.h  MSdcommon.h  MixSoundFile.h  PitchExtract.h  Scoremaps.h  SectionInfo.h  SingLearningApi.h  VectorDistance.h  WriteLog.h  phonograph.h  slowFlanger.h
jnirawbytetest/app/src/main/cpp/kge/src/: JniLocalRefTest.cpp  JniLocalRefTest.h  KalaAudioGain.cpp  KalaAudioGain.h  KalaClean.cpp  KalaClean.h  KalaClean2.cpp  KalaClean2.h  KalaMix.cpp  KalaMix.h  KalaReverb.cpp  KalaReverb.h  KalaToneShift.cpp  KalaToneShift.h  KalaVoiceShift.cpp  KalaVoiceShift.h  KalaVolumeScaler.cpp  KalaVolumeScaler.h  KgeAudioTest.cpp  callsdk.cpp  utils.h
jnirawbytetest/app/src/main/cpp/m4amuxer/: bits_op.h  latmenc.c  mpeg4audio.c  mpeg4audio.h
jnirawbytetest/app/src/main/cpp/m4amuxer/del/: get_bits.h  intreadwrite.h  put_bits.h
jnirawbytetest/app/src/main/cpp/supersound/include/: supersound_api.h  supersound_types.h
jnirawbytetest/app/src/main/cpp/supersound/src/: SuperSoundWrapper.cpp  SuperSoundWrapper.h
jnirawbytetest/app/src/main/java/com/aop/: NativeLoad.java
jnirawbytetest/app/src/main/java/com/com/tencent/qqlive/mediaplayer/playernative/: NativeAudioProcessor.java
jnirawbytetest/app/src/main/java/com/tencent/: LzmaDecoder.java  NativeLibInjectUtils.java  ReflectUtils.java  ZipUtils.java
jnirawbytetest/app/src/main/java/com/tencent/audioeffect/effect/: KalaReverb.java  KalaVolumeScaler.java
jnirawbytetest/app/src/main/java/com/tencent/audioeffect/effect/impl/: KalaAudioGain.java  KalaClean.java  KalaMix.java  KalaReverb.java  KalaToneShift.java  KalaVoiceShift.java  KalaVolumeScaler.java
jnirawbytetest/app/src/main/java/com/tencent/common/: NativeLibLoader.java
jnirawbytetest/app/src/main/java/com/tencent/component/media/effect/: SuperSoundWrapper.java  VoiceChangerWrapper.java
jnirawbytetest/app/src/main/java/com/tencent/radio/ugc/record/widget/: AudioTimeRulerView.java
jnirawbytetest/app/src/main/java/com/young/jnirawbytetest/: BitmapDecodeTest.java  CppSide.java  IOUtils.java  JavaJniPerformanceCompare.java  MainActivity.java  TestCase.java
jnirawbytetest/app/src/main/java/com/young/jnirawbytetest/audiotest/: AudioVolumeCalculator.java  JniLocalRefTest.java  KalaAudioGain.java  KalaClean2.java  KalaMix.java  KalaToneShift.java  KalaVoiceShift.java  KgeAudioTest.java  PCM.java  TestAudioEffectFragment.java
jnirawbytetest/app/src/main/java/com/young/jnirawbytetest/audiotest/encoder/: AACAudioEncoder.java  AACEncoderTestCase.java  AACMuxer.java  AdtsAACMuxer.java  AdtsHeaderBuilder.java  BitsOperator.java  DroidM4AMuxer.java  MediaCodecHelper.java
jnirawbytetest/app/src/main/java/com/young/jnirawbytetest/audiotest/logic/: AudioConsumer.java  AudioProcessor.java  AudioProducer.java  PCMAudioPlayer.java  PCMAudioRecord.java  PCMFormat.java  SaveToFilePcmConsumer.java  SequenceManager.java
jnirawbytetest/app/src/main/java/com/young/jnirawbytetest/supersound/: SuperSoundWrapper.java
jnirawbytetest/app/src/main/res/layout/: activity_main.xml  audio_effect.xml
jnirawbytetest/app/src/main/res/values/: colors.xml  strings.xml
jnirawbytetest/app/src/test/java/com/young/jnirawbytetest/: ExampleUnitTest.java
odds/: ff.c  hexdump  hexdump.c  linkedList
pcmplayer/: build.gradle
student-manager-system/: Readme.md  menu.h  odds.c  odds.h
util/: WavHeaderInfo.java
学生成绩管理系统/: Database.DB  database.c  database.h  main.c  manager.c  manager.h  menu.c  records.c  records.h
并查集/: disjoint_set.cpp  main.cpp
操作系统大作业/: Readme.md
(+215 files in other folders)
